# align2d

./: .gitignore  CMakeLists.txt  README.md  setup.py  test.py
include/: aligner.h  jacobi.h  pyramid.h  utils.h
src/: aligner.cpp  jacobi.cpp  main.cpp  tests.cpp
